@@ -25,3 +25,5 @@ skip = ^DZPA::Skip
 :version = 5.0
 encoding = bytes
 filename = t/data.bin
+
+[MetaConfig]
