@@ -25,3 +25,5 @@ Archive::Tar::Wrapper = 0.15
 
 [Prereqs / RuntimeSuggests]
 PPI::XS = 1.23
+
+[MetaConfig]
