@@ -8,3 +8,4 @@ copyright_holder = ภูมิพลอดุลยเดช
 [@Classic]
 [MetaJSON]
 [NextRelease]
+[MetaConfig]
