@@ -5,3 +5,4 @@ license = Perl_5
 copyright_holder = E. Xavier Ample
 
 [@Classic]
+[MetaConfig]
