@@ -53,6 +53,17 @@ sub _hunkify_hunky_hunk_hunks ($self, $indent, $type, $req) {
   return $str;
 }
 
+around dump_config => sub {
+  my $orig = shift;
+  my $self = shift;
+
+  my $config = $self->$orig;
+
+  $config->{+__PACKAGE__} = { filename => $self->filename };
+
+  return $config;
+};
+
 sub gather_files ($self) {
   my $zilla = $self->zilla;
 
