@@ -62,6 +62,19 @@ sub mvp_aliases { +{ qw(
 
 sub mvp_multivalue_args { qw(skips) }
 
+around dump_config => sub {
+  my $orig = shift;
+  my $self = shift;
+
+  my $config = $self->$orig;
+
+  $config->{+__PACKAGE__} = {
+    map { $_ => [ sort @{ $self->$_ } ] } qw(finder skips),
+  };
+
+  return $config;
+};
+
 sub find_files ($self) {
   my $files = $self->found_files;
 
