@@ -28,6 +28,19 @@ has filename => (
   default => 'LICENSE',
 );
 
+around dump_config => sub {
+  my $orig = shift;
+  my $self = shift;
+
+  my $config = $self->$orig;
+
+  $config->{+__PACKAGE__} = {
+    filename => $self->filename,
+  };
+
+  return $config;
+};
+
 sub gather_files ($self) {
   my $file = Dist::Zilla::File::InMemory->new({
     name    => $self->filename,
