@@ -92,6 +92,20 @@ with qw(
   Dist::Zilla::Role::TextTemplate
 );
 
+around dump_config => sub {
+  my $orig = shift;
+  my $self = shift;
+
+  my $config = $self->$orig;
+
+  $config->{+__PACKAGE__} = {
+    make_path => $self->make_path,
+    # default_jobs is dumped by TestRunner
+  };
+
+  return $config;
+};
+
 my $template = q!# This file was automatically generated by {{ $generated_by }}.
 use strict;
 use warnings;
