@@ -24,6 +24,7 @@ Revision history for {{$dist->name}}
           release test (thanks, Karen Etheridge)
         - all builds now result in a .build/latest symlink (thanks again,
           Karen)
+        - more plugins add their config to metadata when [MetaConfig] is used
 
 6.012     2018-04-21 10:20:21+02:00 Europe/Oslo
         - revert addition of Archive::Tar::Wrapper as a mandatory prereq (in
